<resources>
    <string name="app_name">AndroidTest</string>

    <!-- Main Screen Strings -->
    <string name="activity_main_title">Coding Tasks</string>
    <string name="chat_button">CHAT</string>
    <string name="login_button">LOG IN</string>
    <string name="animation_button">ANIMATION</string>
    <!-- Login Screen Strings -->
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <!-- Animation Screen Strings -->
    <string name="fade_in">FADE IN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">Logo</string>

</resources>
